2003-06-26  Lutz Mueller <lutz@users.sourceforge.net>

	* configure.in: Hook up camlibs/sq905 (driver by Theodore Kilgore
	  <kilgota@banach.math.auburn.edu).

2003-06-22  Christophe Barbe <christophe@ufies.org>

	* gphoto2/main.c, po/*.po:
	  s/gphoto-devel@gphoto.org/gphoto-devel@lists.sourceforge.net/

2003-05-26  Hans Ulrich Niedermann  <gp@n-dimensional.de>

	* configure.in: 2.1.2rc1, with CVS tag
	* libgphoto2/gphoto2-ability-list.c: replace colon by space

2003-05-17  Hans Ulrich Niedermann  <gp@n-dimensional.de>

	* configure.in: 2.1.2dev9, with CVS tags
	* configure.in: 2.1.2dev10, without CVS tags, for development

2003-05-12  Marcus Meissner <marcus@jet.franken.de>

	* configure.in: disabled gsmart, benq, spca504_flash camlibs
	  (now replaced by spca50x camlib).
	  Handle camlibs with - in the name by replacing it with _.

2003-05-12  Hans Ulrich Niedermann  <gp@n-dimensional.de>

	* configure.in: 2.1.2dev8

2003-05-12  Marcus Meissner  <meissner@suse.de>
	
	* configure.in: added agfa-cl20 driver (from cl20.poeml.de).
	* CHANGES: adapted.
	* AUTHORS: added agfa-cl20 authors.

2003-05-05  Marcus Meissner  <marcus@jet.franken.de>
	
	* configure.in: removed ptp driver (now replaced by ptp2)
	* MAINTAINERS: ptp -> ptp2

2003-02-26  Hubert Figuiere  <hfiguiere@teaser.fr>

	* configure.in: added toshiba/pdrm11 to build
	* MAINTAINERS: added toshiba/pdrm11 maintainer

2003-02-21  Hans Ulrich Niedermann  <gp@n-dimensional.de>

	* doc/Makefile.am: renamed man pages
	* doc/gphoto2.3,doc/gphoto2_port.3: removed
	* doc/libgphoto2.3,doc/libgphoto2_port.3: added

2003-02-01  Patrick Mansfield <patmans@users.sourceforge.net>

	*  TESTERS: Added Valentin Rusu as a tester for the Epson PhotoPC 850z

2002-12-03  Marcus Meissner <marcus@jet.franken.de>
	
	* Imported stv0674 camlib from Vincent Sanders <vince@kyllikki.org>.

2002-11-21  Patrick Mansfield <patmans@users.sourceforge.net>

	* libgphoto2/gphoto2-camera.c: Allow a NULL for the path to be